# squid-ml

./: .gitignore  MANIFEST.in  README.md  mlops.sh  pyproject.toml  rebuild.sh  server.sh  setup.py  test_loggers.py
cli/: delete-data.sh  destroy-server.sh  stop-server.sh
infra/: clean-infra.sh  docker-compose.yaml
infra/mlflow/: Dockerfile  requirements.txt
ml_logging/: __init__.py  loggers.py  mlflow_utils.py
mlops/: __init__.py
mlops/_ml_logging/: __init__.py  _decorator_helpers.py  _decorators.py
mlops/cli/: cli_entrypoint.py  create-server.sh
mlops/infra/: docker-compose.yaml
mlops/infra/minio/: create-bucket.sh
mlops/ml_logging/: __init__.py
mlops/server/: __init__.py  operations.py
mlops/server/infra/: docker-compose.yaml
server/: operations.py  tests.py
server/infra/: .env  docker-compose.yaml
squid/ml_logging/: __init__.py  infra_utils.py  loggers.py  utils.py
squid/server/: operations.py
src/: mlops.py
src/cli/: cli_entrypoint.py  start-server.sh
src/infra/: .env
src/infra/mlflow/: Dockerfile
src/ml_logging/: infra_utils.py
tests/: test_loggers.py  test_server.py  utils.py
