[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops"
version = "0.1.0"
dependencies = [
  "mlflow", 
  "boto3", 
]

requires-python = ">=3.8"

authors = [
  {name = "Aryan Bansal", email = "aryanbansal1710@gmail.com"},
]

maintainers = [
  {name = "Aryan Bansal", email = "aryanbansal1710@gmail.com"},
]

description = ""
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["mlops", "mlflow", "docker"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/ar-bansal/mlops"

[project.scripts]
mlops = "cli.cli_entrypoint:main"