[tool.poetry]
name = "squid-ml"
version = "0.1.0"
description = "An easy-to-use, no boilerplate ML experiment tracker."
authors = ["Aryan Bansal <aryanbansal1710@gmail.com>"]
license = "MIT"
homepage = "https://github.com/yourusername/squid-ml"

[tool.poetry.dependencies]
python = "^3.8"
mlflow = ">=2.15.0" 

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
